--- a/playlist.html
+++ b/playlist.html
@@ -40,7 +40,7 @@ nav_exclude: true
     <p style="color: #666; margin-bottom: 1rem;">Download the app:</p>
     <a href="https://apps.apple.com/app/id6748925788" style="display: inline-block; margin: 0 0.5rem; color: #007AFF; text-decoration: none;">App Store</a>
     <span style="color: #ccc;">|</span>
-    <a href="https://play.google.com/store/apps/details?id=net.ohanasports.kai" style="display: inline-block; margin: 0 0.5rem; color: #007AFF; text-decoration: none;">Google Play</a>
+    <a href="https://play.google.com/store/apps/details?id=net.OhanaSports.Kai" style="display: inline-block; margin: 0 0.5rem; color: #007AFF; text-decoration: none;">Google Play</a>
   </div>
 </div>
 
@@ -63,7 +63,7 @@ nav_exclude: true
     // Mobile device - set up app store links and universal link
     const appStoreLink = document.getElementById('appStoreLink');
     if (isAndroid) {
-      appStoreLink.href = 'https://play.google.com/store/apps/details?id=net.ohanasports.kai';
+      appStoreLink.href = 'https://play.google.com/store/apps/details?id=net.OhanaSports.Kai';
     } else {
       // iOS App Store
       appStoreLink.href = 'https://apps.apple.com/app/id6748925788';
